--- a/complex/nginx/default.conf
+++ b/complex/nginx/default.conf
@@ -13,6 +13,7 @@ server {
         proxy_pass http://client;
     }
 
+    # no need for production deployment
     location /sockjs-node {
         proxy_pass http://client;
         proxy_http_version 1.1;
